attempt to add iphone image to homepage

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -8,6 +8,8 @@ a:hover {
 /* Navbar styling */
 .App {
   text-align: center;
+  color: #FFFFFF;
+  font-family: 'Raleway', sans-serif;
 }
 
 .App-logo {
@@ -46,7 +48,7 @@ a:hover {
 
 /* Color/shape of burger icon bars */
 .bm-burger-bars {
-  background: #2e3c48;
+  background: #FFFFFF;
 }
 
 /* Position and sizing of clickable cross button */
@@ -79,4 +81,12 @@ a:hover {
   text-decoration: none;
   padding: 5px;
   font-family: 'Raleway', sans-serif;
+}
+
+/* Blue gradient jumbotron */
+.jumbotron {
+  height: 100vw;
+  background: #00d2ff;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #3a7bd5, #00d2ff);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #3a7bd5, #00d2ff); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
