--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -68,13 +68,19 @@ h1 {
   font-family: 'Raleway', sans-serif;
 }
 
-/* JUMBOTRON - blue */
-.jumbotron {
+/* JUMBOTRONS */
+.jumbotron-blue {
   height: 100vh;
   width: 100vw;
   background: #00d2ff;  /* fallback for old browsers */
   background: -webkit-linear-gradient(to right, #3a7bd5, #00d2ff);  /* Chrome 10-25, Safari 5.1-6 */
   background: linear-gradient(to right, #3a7bd5, #00d2ff); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+}
+
+.jumbotron-white {
+  height: 100vh;
+  width: 100vw;
+  background: #FFFFFF; 
 }
 
 /* LOGO */
