--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -3,22 +3,17 @@
 
 /* Font styling */
 a:hover {
-    color: #808080;
+  color: #808080;
 }
 
 h1 {
-  color: #FFFFFF;
+  color: #000000;
   font-family: 'Raleway', sans-serif;
 }
 
 /* NAVBAR STYLING */
 .App {
   text-align: center;
-  font-family: 'Raleway', sans-serif;
-}
-
-.App-title {
-  font-size: 1.5em;
   font-family: 'Raleway', sans-serif;
 }
 
@@ -33,7 +28,7 @@ h1 {
 
 /* Color/shape of burger icon bars */
 .bm-burger-bars {
-  background: #FFFFFF;
+  background: #2e3c48;
 }
 
 /* Position and sizing of clickable cross button */
@@ -52,7 +47,6 @@ h1 {
   background: #FFFFFF;
   padding: 2.5em;
   font-size: 1.15em;
-  color: #000000;
   width: 100%;
 }
 
@@ -73,17 +67,15 @@ h1 {
 .jumbotron-blue {
   height: 100vh;
   width: 100vw;
-  padding: 0;
-  margin: auto;
   background: #00d2ff;  /* fallback for old browsers */
   background: -webkit-linear-gradient(to right, #3a7bd5, #00d2ff);  /* Chrome 10-25, Safari 5.1-6 */
   background: linear-gradient(to right, #3a7bd5, #00d2ff); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
 .jumbotron-white {
-  height: 100vh;
+  background: #ffffff !important;
+  height: auto;
   width: 100vw;
-  background: #FFFFFF;
 }
 
 /* LOGO */
