--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -217,66 +217,88 @@ h2 {
 
 /* FORMS */
 
-label {
-  display: block;
-  margin: 0px 0px 5px;
+form {
+ padding: 2rem;
+ margin-top: 2rem;
+ margin-right: auto;
+ margin-left: auto;
+ max-width: 23.75rem;
+ background-color: #fff;
+ border-radius: 3px;
+ box-shadow: 0 15px 35px rgba(50, 50, 93, 0.1), 0 5px 15px rgba(0, 0, 0, 0.07);
 }
 
-.upload-form {
-  background: #ffffff;
-  border-radius: 2px;
-  display: inline-block;
-  height: 100%;
-  margin: 0;
-  position: relative;
-  width: 70%;
-  padding: 50px 0;
-  box-shadow: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22);
+label {
+ display: inline-block;
+ margin-bottom: .5rem;
+ font-size: .75rem;
+ text-transform: uppercase;
+ -ms-touch-action: manipulation;
+ touch-action: manipulation;
+}
+
+input,
+textarea {
+ display: block;
+ padding: .5rem .75rem;
+ width: 100%;
+ font-size: 1rem;
+ line-height: 1.25;
+ color: #2B90DE;
+ background-color: #fff;
+ background-image: none;
+ background-clip: padding-box;
+ border-top: 0;
+ border-right: 0;
+ border-bottom: 1px solid #eee;
+ border-left: 0;
+ border-radius: 3px;
+ -webkit-transition: all 0.25s cubic-bezier(0.4, 0, 1, 1);
+ transition: all 0.25s cubic-bezier(0.4, 0, 1, 1);
+}
+
+input:focus,
+textarea:focus {
+ outline: 0;
+ border-bottom-color: #2B90DE;
+}
+
+textarea {
+ resize: vertical;
 }
 
 /* BUTTONS */
 
-.btn {
-  -webkit-border-radius: 28;
-  -moz-border-radius: 28;
-  border-radius: 28px;
-  -webkit-box-shadow: 0px 1px 3px #666666;
-  -moz-box-shadow: 0px 1px 3px #666666;
-  box-shadow: 0px 1px 3px #666666;
-  font-family: 'Raleway', sans-serif;
-  background-color:transparent;
-  color: #ffffff;
-  font-size: 20px;
-  padding: 10px 20px 10px 20px;
+.btn-blue {
+ display: inline-block;
+ padding: .75rem 1rem;
+ margin-top: 1.618rem;
+ font-weight: 400;
+ text-align: center;
+ text-transform: uppercase;
+ color: #fff;
+ vertical-align: middle;
+ white-space: nowrap;
+ background-color: #2B90DE;
+ border: 1px solid transparent;
+ box-shadow: 0 15px 35px rgba(50, 50, 93, 0.1), 0 5px 15px rgba(0, 0, 0, 0.07);
+ cursor: pointer;
+ -webkit-user-select: none;
+ -moz-user-select: none;
+ -ms-user-select: none;
+ user-select: none;
+ -webkit-transition: all 0.20s cubic-bezier(0.4, 0, 1, 1);
+ transition: all 0.20s cubic-bezier(0.4, 0, 1, 1);
+}
+
+.border {
   border: solid #ffffff 1px !important;
-  text-decoration: none;
 }
 
-.btn:hover {
-  color: #2e3c48;
-  background-color: #ffffff;
-  text-decoration: none;
+.btn-blue:focus, .btn-blue:hover {
+ background-color: 	#05CBFA;
+ box-shadow: 0 18px 35px rgba(50, 50, 93, 0.1), 0 8px 15px rgba(0, 0, 0, 0.07);
 }
-
-.blue {
-  -webkit-border-radius: 28;
-  -moz-border-radius: 28;
-  border-radius: 28px;
-  -webkit-box-shadow: 0px 1px 3px #666666;
-  -moz-box-shadow: 0px 1px 3px #666666;
-  box-shadow: 0px 1px 3px #666666;
-  font-family: 'Raleway', sans-serif;
-  background-color: #2B90DE;
-  color: #ffffff;
-  font-size: 20px;
-  padding: 10px 20px 10px 20px;
-  border: solid #2B90DE 1px !important;
-  text-decoration: none;
-}
-
-.blue:hover {
-  color: #2e3c48;
-  background-color: #ffffff;
-  border: solid #2e3c48 1px !important;
-  text-decoration: none;
+.btn-blue:focus {
+ outline: 0;
 }
