--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -306,3 +306,43 @@ textarea {
 .btn-blue:focus {
  outline: 0;
 }
+
+/* DASHBOARD */
+
+.TabContainer {
+  background-color: #fff;
+  max-width: 768px;
+  margin: 0 auto 4rem auto;
+  border-radius: 2px;
+  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+  &:hover {
+    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+  }
+}
+
+.Tabs {
+  display: flex;
+  flex-flow: row nowrap;
+  text-align: center;
+  color: #fff;
+  background-color: #f6f6f6;
+}
+
+.Tab {
+  flex: 1 0 auto;
+  padding: 1rem 1.5rem calc(1rem - 4px);
+  border-bottom: 4px solid transparent;
+  &:hover {
+    cursor: pointer;
+    border-bottom: 4px solid #f6f6f6;
+  }
+  &.is-selected {
+    border-bottom: 4px solid #f6f6f6;
+  }
+}
+
+.TabPanel {
+  color: #000;
+  padding: 1rem;
+}
