--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -110,10 +110,26 @@ h2 {
   margin: 0;
   position: relative;
   width: 90%;
+  padding: 0;
+  margin: 0 auto;
 }
 
 .card-shadow {
   box-shadow: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22);
+}
+
+.card-small {
+  width: 25%;
+  height: auto;
+  position: absolute;
+  left: 10%;
+  display: inline-block;
+}
+
+.card-right {
+  width: 50%;
+  position: absolute;
+  right: 10%;
 }
 
 /* TESTIMONIALS */
