everything before I start breaking shit

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -260,6 +260,7 @@ textarea {
  display: block;
  padding: .5rem .75rem;
  width: 100%;
+ font-size: 1.3rem;
  line-height: 1.25;
  color: #2B90DE;
  background-color: #ffffff;
