--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -323,6 +323,70 @@ textarea {
  outline: 0;
 }
 
+.btn-approved {
+  display: inline-block;
+  text-decoration: none;
+  padding: .75rem 1rem;
+  margin-top: 1.618rem;
+  font-weight: 400;
+  text-align: center;
+  text-transform: uppercase;
+  color: #ffffff;
+  vertical-align: middle;
+  white-space: nowrap;
+  background-color: #4CAF50;
+  border: 1px solid transparent;
+  box-shadow: 0 15px 35px rgba(50, 50, 93, 0.1), 0 5px 15px rgba(0, 0, 0, 0.07);
+}
+
+.btn-declined {
+  display: inline-block;
+  text-decoration: none;
+  padding: .75rem 1rem;
+  margin-top: 1.618rem;
+  font-weight: 400;
+  text-align: center;
+  text-transform: uppercase;
+  color: #ffffff;
+  vertical-align: middle;
+  white-space: nowrap;
+  background-color: #f44336;
+  border: 1px solid transparent;
+  box-shadow: 0 15px 35px rgba(50, 50, 93, 0.1), 0 5px 15px rgba(0, 0, 0, 0.07);
+}
+
+.btn-pending {
+  display: inline-block;
+  text-decoration: none;
+  padding: .75rem 1rem;
+  margin-top: 1.618rem;
+  font-weight: 400;
+  text-align: center;
+  text-transform: uppercase;
+  color: #ffffff;
+  vertical-align: middle;
+  white-space: nowrap;
+  background-color: #ffa500;
+  border: 1px solid transparent;
+  box-shadow: 0 15px 35px rgba(50, 50, 93, 0.1), 0 5px 15px rgba(0, 0, 0, 0.07);
+}
+
+.btn-expired {
+  display: inline-block;
+  text-decoration: none;
+  padding: .75rem 1rem;
+  margin-top: 1.618rem;
+  font-weight: 400;
+  text-align: center;
+  text-transform: uppercase;
+  color: #ffffff;
+  vertical-align: middle;
+  white-space: nowrap;
+  background-color: #e7e7e7;
+  border: 1px solid transparent;
+  box-shadow: 0 15px 35px rgba(50, 50, 93, 0.1), 0 5px 15px rgba(0, 0, 0, 0.07);
+}
+
 /* DASHBOARD */
 
 .TabContainer {
