fix payment buttons

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -289,9 +289,9 @@ textarea {
 .btn-blue {
  display: inline-block;
  text-decoration: none;
- padding: .75rem 1rem;
- margin-top: 1.618rem;
- font-weight: 400;
+ padding: .75rem 0.5rem;
+ margin-top: 1.5rem;
+ font-weight: 300;
  text-align: center;
  text-transform: uppercase;
  color: #ffffff;
@@ -326,9 +326,9 @@ textarea {
 .btn-approved {
   display: inline-block;
   text-decoration: none;
-  padding: .75rem 1rem;
-  margin-top: 1.618rem;
-  font-weight: 400;
+  padding: 0.2rem 0.5rem;
+  margin-top: 0.5rem;
+  font-weight: 300;
   text-align: center;
   text-transform: uppercase;
   color: #ffffff;
@@ -342,9 +342,9 @@ textarea {
 .btn-declined {
   display: inline-block;
   text-decoration: none;
-  padding: .75rem 1rem;
-  margin-top: 1.618rem;
-  font-weight: 400;
+  padding: 0.2rem 0.5rem;
+  margin-top: 0.5rem;
+  font-weight: 300;
   text-align: center;
   text-transform: uppercase;
   color: #ffffff;
@@ -358,9 +358,8 @@ textarea {
 .btn-pending {
   display: inline-block;
   text-decoration: none;
-  padding: .75rem 1rem;
-  margin-top: 1.618rem;
-  font-weight: 400;
+  padding: 0.2rem 0.5rem;
+  margin-top: 0.5rem;
   text-align: center;
   text-transform: uppercase;
   color: #ffffff;
@@ -374,9 +373,9 @@ textarea {
 .btn-expired {
   display: inline-block;
   text-decoration: none;
-  padding: .75rem 1rem;
-  margin-top: 1.618rem;
-  font-weight: 400;
+  padding: 0.2rem 0.5rem;
+  margin-top: 0.5rem;
+  font-weight: 300;
   text-align: center;
   text-transform: uppercase;
   color: #ffffff;
